--- a/templates/upload_excel.html
+++ b/templates/upload_excel.html
@@ -15,10 +15,11 @@
     </form>
 
     <p>Excel columns must be:<br>
-    Name, Father Name, Roll Number, Registration Number, Email, Mobile, Course, Semester</p>
+    Name, Father Name, Roll Number, Registration Number, Email, Mobile, Course, branch, Semester, session</p>
 
     <a href="/admin">Back</a>
 </div>
 
 </body>
 </html>
+
