--- a/templates/register.html
+++ b/templates/register.html
@@ -12,24 +12,32 @@
     <input type="text"
            name="name"
            placeholder="Full Name"
-           required>
+           required
+           style="width:250px;">
     <br><br>
 
     <input type="email"
            name="email"
            placeholder="Email"
-           required>
+           required
+           style="width:250px;">
     <br><br>
 
-    <div style="position: relative; width: 220px;">
+    <div style="position:relative; width:250px;">
         <input type="password"
                id="registerPassword"
                name="password"
                placeholder="Password"
                required
-               style="width:100%; padding-right:30px;">
-        <span onclick="togglePassword()"
-              style="position:absolute; right:8px; top:6px; cursor:pointer;">
+               style="width:100%; padding-right:35px;">
+        <span onclick="toggleRegisterPassword()"
+              style="
+                position:absolute;
+                right:10px;
+                top:50%;
+                transform:translateY(-50%);
+                cursor:pointer;
+                user-select:none;">
             👁️
         </span>
     </div>
@@ -44,7 +52,7 @@
 <a href="{{ url_for('login') }}">Back to Login</a>
 
 <script>
-function togglePassword() {
+function toggleRegisterPassword() {
     const pwd = document.getElementById("registerPassword");
     pwd.type = pwd.type === "password" ? "text" : "password";
 }
